Fix: Exercises from 0 to 5 done and Index.html fixed

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer module src="./exercise_00/index.js"></script>
-    <script defer module src="./exercise_00/raiseValueToPower2.js"></script>
-    <script defer module src="./exercise_01/index.js"></script>
-    <script defer module src="./exercise_01/getDistanceFromThreshold.js"></script>
-    <script defer module src="./exercise_02/index.js"></script>
-    <script defer module src="./exercise_02/getTotalWordsFromString.js"></script>
-    <script defer module src="./exercise_03/index.js"></script>
-    <script defer module src="./exercise_03/generateRandomNumberInRange.js"></script>
-    <script defer module src="./exercise_04/index.js"></script>
-    <script defer module src="./exercise_04/isGreaterThan.js"></script>
-    <script defer module src="./exercise_05/index.js"></script>
-    <script defer module src="./exercise_05/isAdditionGreaterThanFifty.js"></script>
+    <script type="module" src="./exercise_00/index.js"></script>
+    <script type="module" src="./exercise_00/raiseValueToPower2.js"></script>
+    <script type="module" src="./exercise_01/index.js"></script>
+    <script type="module" src="./exercise_01/getDistanceFromThreshold.js"></script>
+    <script type="module" src="./exercise_02/index.js"></script>
+    <script type="module" src="./exercise_02/getTotalWordsFromString.js"></script>
+    <script type="module" src="./exercise_03/index.js"></script>
+    <script type="module" src="./exercise_03/generateRandomNumberInRange.js"></script>
+    <script type="module" src="./exercise_04/index.js"></script>
+    <script type="module" src="./exercise_04/isGreaterThan.js"></script>
+    <script type="module" src="./exercise_05/index.js"></script>
+    <script type="module" src="./exercise_05/isAdditionGreaterThanFifty.js"></script>
     <title>JavaScript Foundations</title>
 </head>
 <body>
