Fix: Exercises from 6 to 10 done

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <script type="module" src="./exercise_04/isGreaterThan.js"></script>
     <script type="module" src="./exercise_05/index.js"></script>
     <script type="module" src="./exercise_05/isAdditionGreaterThanFifty.js"></script>
+    <script type="module" src="./exercise_06/index.js"></script>
+    <script type="module" src="./exercise_06/checkCollectionHasElements.js"></script>
+    <script type="module" src="./exercise_07/index.js"></script>
+    <script type="module" src="./exercise_07/isTypeOf.js"></script>
+    <script type="module" src="./exercise_08/index.js"></script>
+    <script type="module" src="./exercise_08/formatStringByWordsLength.js"></script>
+    <script type="module" src="./exercise_09/index.js"></script>
+    <script type="module" src="./exercise_09/getDistanceMessageFromSumTo100.js"></script>
+    <script type="module" src="./exercise_10/index.js"></script>
+    <script type="module" src="./exercise_10/transformCollectionToString.js"></script>
     <title>JavaScript Foundations</title>
 </head>
 <body>
